crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0116_continue_in_finally.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    ContinueInFinally: ~
  location:
    row: 6
    column: 8
  end_location:
    row: 6
    column: 16
  fix: ~
  parent: ~
- kind:
    ContinueInFinally: ~
  location:
    row: 13
    column: 12
  end_location:
    row: 13
    column: 20
  fix: ~
  parent: ~
- kind:
    ContinueInFinally: ~
  location:
    row: 18
    column: 4
  end_location:
    row: 18
    column: 12
  fix: ~
  parent: ~

