crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0117_nonlocal_without_binding.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
./resources/test/fixtures/pylint/nonlocal_without_binding.py:5:14: PLE0117 Nonlocal name `x` found without binding
  |
5 | def f():
6 |     nonlocal x
  |              ^ PLE0117
  |

./resources/test/fixtures/pylint/nonlocal_without_binding.py:9:14: PLE0117 Nonlocal name `y` found without binding
   |
 9 | def f():
10 |     nonlocal y
   |              ^ PLE0117
   |

./resources/test/fixtures/pylint/nonlocal_without_binding.py:19:18: PLE0117 Nonlocal name `y` found without binding
   |
19 |     def f():
20 |         nonlocal y
   |                  ^ PLE0117
   |


