crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0118_use_prior_to_global_declaration.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 7"
    suggestion: ~
    fixable: false
  location:
    row: 5
    column: 10
  end_location:
    row: 5
    column: 11
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 17"
    suggestion: ~
    fixable: false
  location:
    row: 15
    column: 10
  end_location:
    row: 15
    column: 11
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 25"
    suggestion: ~
    fixable: false
  location:
    row: 23
    column: 10
  end_location:
    row: 23
    column: 11
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 35"
    suggestion: ~
    fixable: false
  location:
    row: 33
    column: 10
  end_location:
    row: 33
    column: 11
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 43"
    suggestion: ~
    fixable: false
  location:
    row: 41
    column: 4
  end_location:
    row: 41
    column: 5
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 53"
    suggestion: ~
    fixable: false
  location:
    row: 51
    column: 4
  end_location:
    row: 51
    column: 5
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 61"
    suggestion: ~
    fixable: false
  location:
    row: 59
    column: 8
  end_location:
    row: 59
    column: 9
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 71"
    suggestion: ~
    fixable: false
  location:
    row: 69
    column: 8
  end_location:
    row: 69
    column: 9
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 79"
    suggestion: ~
    fixable: false
  location:
    row: 77
    column: 8
  end_location:
    row: 77
    column: 9
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 89"
    suggestion: ~
    fixable: false
  location:
    row: 87
    column: 8
  end_location:
    row: 87
    column: 9
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 97"
    suggestion: ~
    fixable: false
  location:
    row: 95
    column: 8
  end_location:
    row: 95
    column: 9
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 107"
    suggestion: ~
    fixable: false
  location:
    row: 105
    column: 8
  end_location:
    row: 105
    column: 9
  fix: ~
  parent: ~
- kind:
    name: UsePriorToGlobalDeclaration
    body: "Name `x` is used prior to global declaration on line 114"
    suggestion: ~
    fixable: false
  location:
    row: 113
    column: 13
  end_location:
    row: 113
    column: 14
  fix: ~
  parent: ~

