crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0241_duplicate_bases.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
duplicate_bases.py:8:12: PLE0241 Duplicate bases for class `B`
  |
8 | class B(A, A):
  |            ^ PLE0241
9 |     ...
  |


