crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0307_invalid_return_type_str.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
invalid_return_type_str.py:3:16: PLE0307 `__str__` does not return `str`
  |
3 | class Str:
4 |     def __str__(self):
5 |         return 1
  |                ^ PLE0307
6 | 
7 | class Float:
  |

invalid_return_type_str.py:7:16: PLE0307 `__str__` does not return `str`
   |
 7 | class Float:
 8 |     def __str__(self):
 9 |         return 3.05
   |                ^^^^ PLE0307
10 |     
11 | class Int:
   |

invalid_return_type_str.py:11:16: PLE0307 `__str__` does not return `str`
   |
11 | class Int:
12 |     def __str__(self):
13 |         return 0
   |                ^ PLE0307
14 |     
15 | class Bool:
   |

invalid_return_type_str.py:15:16: PLE0307 `__str__` does not return `str`
   |
15 | class Bool:
16 |     def __str__(self):
17 |         return False
   |                ^^^^^ PLE0307
18 |     
19 | class Str2:
   |


