crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0604_invalid_all_object.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
./resources/test/fixtures/pylint/invalid_all_object.py:1:1: PLE0604 Invalid object in `__all__`, must contain only strings
  |
1 | __all__ = (
  | ^^^^^^^ PLE0604
2 |     None,  # [invalid-all-object]
3 |     Fruit,
  |

./resources/test/fixtures/pylint/invalid_all_object.py:7:1: PLE0604 Invalid object in `__all__`, must contain only strings
  |
7 | )
8 | 
9 | __all__ = list([None, "Fruit", "Worm"])  # [invalid-all-object]
  | ^^^^^^^ PLE0604
  |


