crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE0605_invalid_all_format.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: InvalidAllFormat
    body: "Invalid format for `__all__`, must be `tuple` or `list`"
    commit: ~
    fixable: false
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 7
  fix: ~
  parent: ~
- kind:
    name: InvalidAllFormat
    body: "Invalid format for `__all__`, must be `tuple` or `list`"
    commit: ~
    fixable: false
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 7
  fix: ~
  parent: ~
- kind:
    name: InvalidAllFormat
    body: "Invalid format for `__all__`, must be `tuple` or `list`"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 7
  fix: ~
  parent: ~
- kind:
    name: InvalidAllFormat
    body: "Invalid format for `__all__`, must be `tuple` or `list`"
    commit: ~
    fixable: false
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 7
  fix: ~
  parent: ~
- kind:
    name: InvalidAllFormat
    body: "Invalid format for `__all__`, must be `tuple` or `list`"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 7
  fix: ~
  parent: ~
- kind:
    name: InvalidAllFormat
    body: "Invalid format for `__all__`, must be `tuple` or `list`"
    commit: ~
    fixable: false
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 7
  fix: ~
  parent: ~
- kind:
    name: InvalidAllFormat
    body: "Invalid format for `__all__`, must be `tuple` or `list`"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 7
  fix: ~
  parent: ~
- kind:
    name: InvalidAllFormat
    body: "Invalid format for `__all__`, must be `tuple` or `list`"
    commit: ~
    fixable: false
  location:
    row: 15
    column: 0
  end_location:
    row: 15
    column: 7
  fix: ~
  parent: ~

