crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE1142_await_outside_async.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
./resources/test/fixtures/pylint/await_outside_async.py:12:11: PLE1142 `await` should be used within an async function
   |
12 | def not_async():
13 |     print(await nested())  # [await-outside-async]
   |           ^^^^^^^^^^^^^^ PLE1142
   |

./resources/test/fixtures/pylint/await_outside_async.py:25:9: PLE1142 `await` should be used within an async function
   |
25 | async def func2():
26 |     def inner_func():
27 |         await asyncio.sleep(1)  # [await-outside-async]
   |         ^^^^^^^^^^^^^^^^^^^^^^ PLE1142
   |


